# dez2025

./: .gitignore  README.md
01-docker-terraform/: Dockerfile  README.md  docker-compose.yaml  pyproject.toml
01-docker-terraform/.devcontainer/: devcontainer.json  docker-compose.yaml
01-docker-terraform/.docker/: start.sh
01-docker-terraform/notebooks/: homework.ipynb
01-docker-terraform/scripts/: ingest.py  seed_db.sh
01-docker-terraform/terraform/: main.tf  variables.tf
02-workflow-orchestration/: Makefile  README.md  docker-compose.kestra.yml  pyproject.toml
02-workflow-orchestration/.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yaml
02-workflow-orchestration/flows/: zoomcamp_green_taxi_etl.yml
02-workflow-orchestration/notebooks/: homework.ipynb
