[tool.poetry]
name = "taxi-ingest"
version = "0.1.0"
description = "Data ingestion for NY Taxi dataset"
authors = ["Daniel Amaral <silva.daniel86@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.2.3"
sqlalchemy = "^2.0.37"
psycopg2-binary = "^2.9.10"
jupyter = "^1.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
